made some tweaks for memory usage to TreeBuilder and storage in Octree/Octet and implemented initial version of Icosatree (there's no subcell splitting in Icosatet atm and the tree bounds' contains check doesn't seem to work right)